Fixed package structure and resolved SonarCloud issues